# minmsg

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: bbuf.h  minmsg.h
test/: CMakeLists.txt  test.cpp
